--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav                                             /* top padding of the page */
 
 .btn
 {
-    background-color: rgb(0, 30, 54);
+    background-color: #486670;
     padding: 6px 13px 6px 13px;
     color: white;
     border: rgb(19, 25, 119) 1px solid;
@@ -74,6 +74,101 @@ nav                                             /* top padding of the page */
 {
     font-size: 30px;
 }
-
-
 /* Navbar Ends */
+
+/* About Us Starts */
+
+.aboutus                                       /* about us margin  */
+{
+    margin: 200px;
+    margin-left: 350px;
+}
+
+.aboutus li
+{
+    margin-top: 10px;
+}
+.btn-tranparent                                /* Buttion tranparent */
+{
+    background-color: transparent;
+    padding: 6px 13px 6px 13px;
+    color: black;
+    border: rgb(19, 25, 119) 1px solid;
+    border-radius: 10px;
+}
+.btn-tranparent:hover                         /* buttion hover */
+{
+    background-color: lightblue;
+}
+
+.aboutus-subdiv div                           /* div the line in center */
+{
+    padding-right: 100px ;
+    display: inline-block;
+    width: 500px;
+}
+/* About us Ends */
+
+/* Services Starts */
+
+.services                                   /* margin */
+{
+    margin: 100px;    
+}
+
+.my-div-bg                                  /* backgroud for division */     
+{
+    background-color: rgba(222, 230, 231, 0.425);
+}
+.card                                       /* card edit */
+{
+    height: 300px;
+    width: 300px;
+    background-color: white;
+    border-radius: 20px ;
+    display: inline-block;
+    margin-left: 150px;
+    margin-top: 30px;
+    padding: 50px;
+    transition: transform 1s;
+
+}
+
+.card:hover                                 /* hover for card */
+{
+    box-shadow: 0px 5px rgb(20, 118, 209);
+    transform: translate(0px,  -10px);
+}
+
+.card i
+{
+    background-color: rgb(14, 129, 182);
+    color: white;
+    padding: 20px;
+    border-radius: 100%;
+}
+/* SErvices Ends */
+
+/* CTA starts */
+.cta
+{
+    height: 250px;
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("https://cdn.pixabay.com/photo/2023/12/15/14/49/city-8450817_640.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: white;
+    padding: 40px 100px 40px 100px;
+}
+.cta-tranparent                                /* Buttion tranparent */
+{
+    background-color: transparent;
+    padding: 6px 13px 6px 13px;
+    color: rgb(255, 255, 255);
+    border: rgb(252, 252, 252) 1px solid;
+    border-radius: 10px;
+}
+.cta-tranparent:hover                         /* buttion hover */
+{
+    background-color: rgb(109, 198, 228);
+}
+/* CTA Ends */
